menu shift on hover repair

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -34,6 +34,15 @@
       &:hover{
         font-weight: base.$extraBold;
       }
+
+      &::before {
+        display: block;
+        content: attr(title);
+        font-weight: bold;
+        height: 0;
+        overflow: hidden;
+        visibility: hidden;
+    }
     }
     
 
